--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @use 'sinopse';
 @use 'actors';
 @use 'watch';
+@use 'faq';
 
 //Fontes
 @font-face {
@@ -17,6 +18,7 @@
     font-size: $fontSize;
     color: variables.$colorTitle;
     font-family: Ringm;
+    font-style: italic;
 }
 
 //Reset
@@ -46,6 +48,7 @@
 
 .text--medium {
     font-size: 20px;
+    color: variables.$colorText;
 }
 
 .text--small {
