--- a/src/styles/_actors.scss
+++ b/src/styles/_actors.scss
@@ -5,11 +5,24 @@
     margin: 0 auto;
     padding: 20px;
     text-align: center;
+
     &__list{
         display: grid;
         grid-template-columns: repeat(5, 1fr);
         gap: 30px;
+        place-items: center;
         margin-top: 34px;
+
+        @media (max-width: 768px) {
+            grid-template-columns: repeat(3, 1fr);
+            gap: 15px;
+        }
+
+        @media (min-width: 769px) and (max-width: 992px) {
+            grid-template-columns: repeat(4, 1fr);
+            gap: 15px;
+        }
+
         &__item{
             position: relative;
             overflow: hidden;
@@ -17,12 +30,33 @@
             height: 170px;
             border-radius: 10px;
             
+            @media (max-width: 768px) {
+                width: 100px;
+                height: 100px;
+            }
+
             &:nth-child(16) {
                 grid-column: 2 / 4;
+
+                @media (max-width: 768px) {
+                    grid-column: auto;
+                }
+
+                @media (min-width: 769px) and (max-width: 992px) {
+                    grid-column: auto;
+                }
             }
 
             &:nth-child(17) {
                 grid-column: 4 / 6;
+
+                @media (max-width: 768px) {
+                    grid-column: auto;
+                }
+
+                @media (min-width: 769px) and (max-width: 992px) {
+                    grid-column: auto;
+                }
             }
 
             img {
