--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -11,14 +11,28 @@
     &__container {
         display: flex;
         justify-content: space-between;
-        padding: 8px 36px;max-width: 1024px;
+        flex-wrap: wrap;
+        padding: 8px 36px;
+        max-width: 1024px;
         margin: 0 auto;
+
+        @media (max-width: 768px) {
+            justify-content: center;
+        }
+
+        @media (min-width: 769px) and (max-width: 992px) {
+            justify-content: center;
+        }
     }
 
     &__logo {
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        @media (max-width: 768px) {
+            padding-top: 14px;
+        }
         
         &__img {
             width: 40px;
@@ -33,8 +47,14 @@
 }
 
 .button__links {
-            margin: 8px;
-            color: variables.$colorTitle;
-            text-decoration: none;
-            font-weight: bold;
-        }
+    display: inline-block;
+    margin: 8px;
+    color: variables.$colorTitle;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 8px;
+
+    @media (max-width: 768px) {
+        text-align: center;
+    }
+}
