--- a/src/styles/_sinopse.scss
+++ b/src/styles/_sinopse.scss
@@ -3,18 +3,23 @@
 .sinopse {
     max-width: 1024px;
     margin: 64px auto;
+    padding: 18px;
 
     &__title {
         margin-bottom: 46px;
-        margin-top: 150px;
+        margin-top: 50px;
         text-align: center;
         max-width: 960px;
+
+        @media (max-width: 768px) {
+            margin-top: 0;
+        }
     }
 
     &__movie {
         display: flex;
         justify-content: space-evenly;
-        align-items: center;
+        align-items: flex-start;
         flex-wrap: wrap;
         max-width: 960px;
 
@@ -28,6 +33,11 @@
         &__description {
             max-width: 520px;
             text-align: center;
+            padding-top: 24px;
+
+            @media (min-width: 769px) and (max-width: 992px) {
+                max-width: 640px;
+            }
 
             &__subtitle {
                 color: variables.$colorTitle;
