--- a/src/styles/_faq.scss
+++ b/src/styles/_faq.scss
@@ -19,7 +19,7 @@
             &__question {
                 color: variables.$colorTitle;
                 font-weight: bold;
-                padding: 24px;
+                padding: 20px;
                 cursor: pointer;
                 position: relative;
 
@@ -32,6 +32,11 @@
                     display: flex;
                     align-items: center;
                     font-size: 30px;
+
+                    @media (max-width: 530px) {
+                        top: 20px;
+                        right: 10px;
+                    }
                 }
             }
 
